# AudioPlay

./: .gitignore  .gitmodules  CMakeLists.txt
include/: AudioPlay.h
src/: AudioPlay.c
